--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 	content="https://labspace.com.tw/assets/upload/product/LabSpace_FB.png" />
 
 <!-- shortcut -->
-<link rel="shortcut icon" href="../assets/images/favicon.png"
+<link rel="shortcut icon" href="favicon.png"
 	type="image/x-icon">
-<link rel="icon" href="../assets/images/favicon.png" type="image/x-icon">
-<link rel="apple-touch-icon" href="../assets/images/favicon.png"
+<link rel="icon" href="favicon.png" type="image/x-icon">
+<link rel="apple-touch-icon" href="favicon.png"
 	type="image/x-icon">
 
 <!-- css -->
@@ -113,7 +113,7 @@
 			<nav class="nav js-nav" data-active="off">
 				<div class="nav-header">
 					<a href="" class="js-header-logo"> <img
-						src="/assets/images/logo.svg" alt="Lab Space" class="logo">
+						src="logo.svg" alt="Lab Space" class="logo">
 					</a>
 				</div>
 				<div class="nav-wrap">
@@ -174,7 +174,7 @@
 				<div class="container">
 					<div class="header">
 						<a href="" class="js-header-logo"> <img
-							src="/assets/images/logo.svg" alt="Lab Space" class="logo">
+							src="logo.svg" alt="Lab Space" class="logo">
 						</a>
 					</div>
 					<div class="display">
@@ -189,7 +189,7 @@
 								我們提供一個"新"的選擇，<br class="d-md-none">讓您不再煩惱。
 							</p>
 							<a href="https://web.labspace.com.tw/" target="_blank"
-								class="lets-go"> <img src="/assets/images/lets_go.svg"
+								class="lets-go"> <img src="lets_go.svg"
 								alt="Lat’s Go!">
 							</a>
 						</div>
@@ -203,7 +203,7 @@
 				<div class="container">
 					<div class="header">
 						<a href="" class="js-header-logo"> <img
-							src="/assets/images/logo.svg" alt="Lab Space" class="logo">
+							src="logo.svg" alt="Lab Space" class="logo">
 						</a>
 					</div>
 					<div class="display">
@@ -228,7 +228,7 @@
 				<div class="container">
 					<div class="header">
 						<a href="" class="js-header-logo"> <img
-							src="/assets/images/logo.svg" alt="Lab Space" class="logo">
+							src="logo.svg" alt="Lab Space" class="logo">
 						</a>
 					</div>
 					<div class="display">
@@ -257,7 +257,7 @@
 				<div class="container">
 					<div class="header">
 						<a href="" class="js-header-logo"> <img
-							src="/assets/images/logo.svg" alt="Lab Space" class="logo">
+							src="logo.svg" alt="Lab Space" class="logo">
 						</a>
 					</div>
 					<div class="display">
@@ -277,7 +277,7 @@
 				<div class="container">
 					<div class="header">
 						<a href="" class="js-header-logo"> <img
-							src="/assets/images/logo.svg" alt="Lab Space" class="logo">
+							src="logo.svg" alt="Lab Space" class="logo">
 						</a>
 					</div>
 					<div class="display">
@@ -305,7 +305,7 @@
 				<div class="container">
 					<div class="header">
 						<a href="" class="js-header-logo"> <img
-							src="/assets/images/logo.svg" alt="Lab Space" class="logo">
+							src="logo.svg" alt="Lab Space" class="logo">
 						</a>
 					</div>
 					<div class="display">
@@ -332,7 +332,7 @@
 				<div class="container">
 					<div class="header">
 						<a href="" class="js-header-logo"> <img
-							src="/assets/images/logo.svg" alt="Lab Space" class="logo">
+							src="logo.svg" alt="Lab Space" class="logo">
 						</a>
 					</div>
 					<div class="display">
@@ -357,13 +357,13 @@
 			<section id="ai" class="section ai" data-timeout=11000>
 				<div class="cover">
 					<video playsinline loop muted autoplay poster="">
-						<source src="/assets/vod/iStock-468620302.mp4" type="video/mp4" />
+						<source src="iStock-468620302.mp4" type="video/mp4" />
 					</video>
 				</div>
 				<div class="container">
 					<div class="header">
 						<a href="" class="js-header-logo"> <img
-							src="/assets/images/logo.svg" alt="Lab Space" class="logo">
+							src="logo.svg" alt="Lab Space" class="logo">
 						</a>
 					</div>
 					<div class="display">
@@ -389,7 +389,7 @@
 				<div class="container">
 					<div class="header">
 						<a href="" class="js-header-logo"> <img
-							src="/assets/images/logo.svg" alt="Lab Space" class="logo">
+							src="logo.svg" alt="Lab Space" class="logo">
 						</a>
 					</div>
 					<div class="display">
@@ -417,7 +417,7 @@
 	<div class="modal-wrap modal-contact" data-active="off">
 		<div class="container">
 			<div class="header">
-				<img src="/assets/images/logo.svg" alt="Lab Space" class="logo">
+				<img src="logo.svg" alt="Lab Space" class="logo">
 				<a class="modal-close" href="#"></a>
 			</div>
 			<!-- /.header -->
@@ -458,7 +458,7 @@
 									<input type="text" name="captchatext" class="captcha-input"
 										id="captcha">
 									<!--
-                <img class="captcha-img" id="cap-img" src="/assets/images/captcha/1715320772.3648.jpg" alt="">                
+                <img class="captcha-img" id="cap-img" src="1715320772.3648.jpg" alt="">                
 									!-->
 									<button type="button" class="btn-captcha" id="refresh_captcha"></button>
 								</div>
@@ -626,8 +626,8 @@
 	</script>
 
 	<!-- 寄信表單 -->
-	<script asyn src="../assets/plugins/HoldOn/HoldOn.min.js"></script>
-	<script src="../assets/plugins/validate/jquery.validate.min.js"></script>
+	<script asyn src="HoldOn.min.js"></script>
+	<script src="jquery.validate.min.js"></script>
 	<script>
 		$(document).ready(
 				function() {
@@ -713,8 +713,7 @@
 										console.log(cap)
 										$('#cap-img').attr(
 												'src',
-												"/assets/images/captcha/"
-														+ cap['filename']);
+												 cap['filename']);
 									},
 									error : function(xhr) {
 										console.log(xhr)
@@ -731,8 +730,8 @@
 	<!-- labspace common js (google map api) -->
 	<script src="//static.labspace.com.tw/js/labspace.js"></script>
 	<!-- main js -->
-	<script src="/assets/js/vendor-dist.js"></script>
-	<script src="/assets/js/main-dist.js?v=20201123"></script>
+	<script src="vendor-dist.js"></script>
+	<script src="main-dist.js?v=20201123"></script>
 </body>
 
 </html>
