--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	type="image/x-icon">
 
 <!-- css -->
-<link rel="stylesheet" href="/assets/css/main.css?v=20201126">
+<link rel="stylesheet" href="main.css?v=20201126">
 
 <!-- js -->
 <script
